force-app/main/default/objects/Test_Iteration__c/Test_Iteration__c.object-meta.xml
<CustomObject>
    <label>Test Iteration</label>
    <nameField>
        <displayFormat>IT-{000000}</displayFormat>
        <label>Test Iteration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Iterations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>