force-app/main/default/objects/Test_Iteration__c/fields/Iteration_End_Date_PMT__c.field-meta.xml
<CustomField>
    <fullName>Iteration_End_Date_PMT__c</fullName>
    <label>Iteration End Date</label>
    <type>Date</type>
</CustomField>