force-app/main/default/objects/Test_Iteration__c/fields/Iteration_Number_PMT__c.field-meta.xml
<CustomField>
    <fullName>Iteration_Number_PMT__c</fullName>
    <label>Iteration Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>