force-app/main/default/objects/Test_Iteration__c/fields/Iteration_Start_Date_PMT__c.field-meta.xml
<CustomField>
    <fullName>Iteration_Start_Date_PMT__c</fullName>
    <label>Iteration Start Date</label>
    <type>Date</type>
</CustomField>