force-app/main/default/objects/Test_Iteration__c/fields/Status_PMT__c.field-meta.xml
<CustomField>
    <fullName>Status_PMT__c</fullName>
    <defaultValue>&apos;New&apos;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In Progress with failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>