force-app/main/default/objects/Test_Iteration__c/fields/Test_Execution_PMT__c.field-meta.xml
<CustomField>
    <fullName>Test_Execution_PMT__c</fullName>
    <label>Test Execution</label>
    <referenceTo>Test_Execution_PMT__c</referenceTo>
    <relationshipLabel>Test Iteration</relationshipLabel>
    <relationshipName>Test_Iteration</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>