force-app/main/default/objects/Test_Iteration__c/fields/Test_Iteration_PMT__c.field-meta.xml
<CustomField>
    <fullName>Test_Iteration_PMT__c</fullName>
    <formula>IF( Total_test_scenario_failed_PMT__c =0,  IMAGE(&quot;www.google.com&quot;, &quot;R&quot;) ,  IF( AND( Total_test_scenario_failed_PMT__c =0, Total_test_scenario_passed_PMT__c &lt;0), &quot;No image&quot;,  IF( AND( Total_test_scenario_failed_PMT__c = 0, Total_test_scenario_passed_PMT__c &lt; Total_test_scenario_PMT__c ) ,  IMAGE(&quot;www.google.com&quot;, &quot;A&quot;) ,  IF( AND( Total_test_scenario_failed_PMT__c =0, Total_test_scenario_passed_PMT__c = Total_test_scenario_PMT__c ) ,  IMAGE(&quot;www.google.com&quot;, &quot;G&quot;),&quot;No image&quot; ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Iteration</label>
    <type>Text</type>
</CustomField>