force-app/main/default/objects/Test_Iteration__c/fields/Total_test_scenario_failed_PMT__c.field-meta.xml
<CustomField>
    <fullName>Total_test_scenario_failed_PMT__c</fullName>
    <label>Total test scenario failed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>