force-app/main/default/objects/Test_Iteration__c/validationRules/Iteration_Number_Can_not_be_Changed_PMT.validationRule-meta.xml
<ValidationRule>
    <fullName>Iteration_Number_Can_not_be_Changed_PMT</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISNEW()) ,ISCHANGED( Iteration_Number_PMT__c ))</errorConditionFormula>
    <errorDisplayField>Iteration_Number_PMT__c</errorDisplayField>
    <errorMessage>It can not be changed iteration number</errorMessage>
</ValidationRule>