force-app/main/default/objects/Test_Iteration__c/validationRules/Iteration_Number_should_be_manullay_PMT.validationRule-meta.xml
<ValidationRule>
    <fullName>Iteration_Number_should_be_manullay_PMT</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW() , Iteration_Number_PMT__c != Test_Execution_PMT__r.Number_of_Iteration_PMT__c +1)</errorConditionFormula>
    <errorMessage>Iteration number should be manually</errorMessage>
</ValidationRule>